added docs for categories and added missing item operation
